Fixed formatting not saving, fixed #53 Some pages can't have this fix as it adds weird spacing between the lines (especially in cards)

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -329,3 +329,7 @@ textarea.readonly {
 .td-draggable {
     cursor: move !important;
 }
+
+.preserve-formatting {
+    white-space: pre-wrap;
+}
